# commitee_board

./: .gitignore  README.md  commitee_spider.py  gera_csv.py  pyproject.toml  trata_json.py  trata_urls.py  url.csv
